<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiDi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_buscar">Buscar</string>
    <string name="boton_profile"></string>
    <string name="titulo_elemento_lista">A</string>
    <string name="subtitulo_elemento_lista">A</string>
    <string name="title_activity_display_list">DisplayListActivity</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="button_initial">Contin.</string>
    <string name="button_taxis">Taxis</string>
    <string name="button_eventos">Eventos</string>
    <string name="button_reservas">Reserv</string>
    <string name="button_directorio">Direct</string>
    <string name="title_activity_pedir_taxi">PedirTaxiActivity</string>
    <string name="button_opciones">Opciones</string>
    <string name="button_solicitud">Solicitud</string>
    <string name="title_activity_eventos">EventosActivity</string>
    <string name="title_activity_reservas">ReservasActivity</string>
    <string name="title_activity_categorias">CategoriasActivity</string>
    <string name="title_activity_subcategorias">SubcategoriasActivity</string>
    <string name="title_activity_buffer">BufferActivity</string>
    <string name="imagebuttonstr">ImageButton</string>
    <string name="title_activity_decripcion_empresa">DecripcionEmpresaActivity</string>
    <string name="button_hacia_map">Mapa</string>
    <string name="button_filtrar">Filtrar</string>
    <string name="title_activity_side_bar_test">SideBarTestActivity</string>

</resources>