<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".ReservasActivity"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            
            <LinearLayout
    	        android:layout_width="0dp"
        	    android:layout_height="match_parent"
            	android:layout_weight=".15"
    	        android:orientation="horizontal" >
    	        <ImageButton
	                android:id="@+id/boton_imagen_hacia_profile"
    	            android:layout_width="0dp"
        	        android:layout_weight=".15"
        	        android:layout_height="match_parent"
            	    android:contentDescription="@string/imagebuttonstr"
                	android:background="@drawable/configuracion3"
                />
        	</LinearLayout>
			<LinearLayout
    	        android:layout_width="0dp"
        	    android:layout_height="match_parent"
            	android:layout_weight=".6"
	            android:background="@drawable/buscador"
    	        android:orientation="horizontal" >
    	        <EditText android:id="@+id/text_field_busqueda_inicio"
	                android:layout_height="match_parent"
    	            android:hint="@string/string_buscar"
    	            android:background="@null"
    	            android:paddingTop="5dp"
    	            android:paddingBottom="5dp"
    	            android:paddingLeft="35dp"
        	        android:layout_width="match_parent" />
        	</LinearLayout>

            <ImageButton
                android:id="@+id/boton_imagen_proceder_busqueda"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:contentDescription="@string/imagebuttonstr"
                android:layout_height="match_parent"
                android:background="@drawable/logonuevodididifuso"
                android:scaleType="centerInside"
                android:onClick="clickeadoAlBotonBusqueda"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".005"
            android:background="@drawable/line"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".095"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/buttontaxismenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".249"
                android:layout_height="match_parent"
		        android:text="@string/button_taxis"
		        android:background="@null"
		        android:textColor="#2980A6"
		        android:onClick="pasarAViewPedirTaxi" />
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".005"
            	android:background="@drawable/grayverticallines"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
    	        android:paddingRight="@dimen/activity_horizontal_margin"
        	    android:orientation="horizontal" >
	        </LinearLayout>
            <Button
                android:id="@+id/buttoneventosmenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_eventos"
		        android:background="@null"
		        android:textColor="#2980A6"
		        android:onClick="clickeadoAlBotonEventos" />
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".005"
            	android:background="@drawable/grayverticallines"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
    	        android:paddingRight="@dimen/activity_horizontal_margin"
        	    android:orientation="horizontal" >
	        </LinearLayout>
            <Button
                android:id="@+id/buttonreservasmenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_reservas"
		        android:background="@null"
		        android:textColor="#2980A6"
		        />
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".005"
            	android:background="@drawable/grayverticallines"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
    	        android:paddingRight="@dimen/activity_horizontal_margin"
        	    android:orientation="horizontal" >
	        </LinearLayout>
            <Button
                android:id="@+id/buttondirectoriomenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_directorio"
		        android:background="@null"
		        android:textColor="#2980A6"
		        android:onClick="clickeadoAlBotonDirectorio" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".005"
            android:background="@drawable/line"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
        </LinearLayout>
        
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight=".795"
            android:orientation="horizontal" >
            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                />
		</RelativeLayout>
</LinearLayout>