<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".SecondActivity"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/boton_imagen_hacia_profile"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="match_parent"
                android:background="@drawable/configuser"
                />
            
            <EditText android:id="@+id/text_field_busqueda_inicio"
                android:layout_height="match_parent"
                android:hint="@string/string_buscar"
                android:layout_weight=".6"
                android:layout_width="0dp" />

            <ImageButton
                android:id="@+id/boton_imagen_proceder_busqueda"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
                android:background="@drawable/logoddflat"
                android:scaleType="centerInside"
                android:onClick="clickeadoAlBotonBusqueda"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/buttontaxismenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_taxis"
		        android:onClick="pasarAViewPedirTaxi" />
            <Button
                android:id="@+id/buttoneventosmenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_eventos"
		        android:onClick="clickeadoAlBotonEventos" />
            <Button
                android:id="@+id/buttonreservasmenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_reservas"
		        android:onClick="clickeadoAlBotonReservas" />
            <Button
                android:id="@+id/buttondirectoriomenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_directorio"
		        android:onClick="clickeadoAlBotonDirectorio" />

        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight=".61"
            android:background="@drawable/border"
            android:orientation="horizontal" >
            <ViewFlipper android:id="@+id/viewFlipperSecondActivity"
                    android:layout_height="match_parent"
        			android:layout_width="match_parent" >

			        <LinearLayout
			            android:layout_height="fill_parent"
			            android:layout_width="fill_parent"
			            android:orientation="vertical" >
						<!--
			            <TextView android:layout_height="wrap_content"
		                      android:layout_width="fill_parent"
		                      android:text="Taxis"
		                      android:textSize="23sp"
		                      android:gravity="center_horizontal"/>
		                -->
		                <ImageView
			                android:layout_width="fill_parent"
			                android:layout_height="fill_parent"
			                android:src="@drawable/dides"
			            />
			        </LinearLayout>

			        <LinearLayout
			            android:layout_height="fill_parent"
			            android:layout_width="fill_parent"
			            android:orientation="vertical" >
			            <!--
			            <TextView android:layout_height="wrap_content"
	        	              android:layout_width="fill_parent"
	            	          android:text="Eventos"
	                	      android:textSize="23sp"
	                    	  android:gravity="center_horizontal"/>
	                    -->
	                    <ImageView
			                android:layout_width="fill_parent"
			                android:layout_height="fill_parent"
			                android:src="@drawable/paint"
			            />
			        </LinearLayout>

			        <LinearLayout
			            android:layout_height="fill_parent"
			            android:layout_width="fill_parent"
			            android:orientation="vertical" >
						<!--
			            <TextView android:layout_height="wrap_content"
		                      android:layout_width="fill_parent"
    		                  android:text="Reservas"
        		              android:textSize="23sp"
            		          android:gravity="center_horizontal"/>
            		    -->
            		    <ImageView
			                android:layout_width="fill_parent"
			                android:layout_height="fill_parent"
			                android:src="@drawable/homer"
			            />
			        </LinearLayout>
        
			</ViewFlipper>
			            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                />
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight=".19"
            android:orientation="horizontal" >
            
            <ImageButton
                android:id="@+id/boton_imagen_menu_principal_1"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/didirapidtaxi"
                android:background="@null"
                />
            
            <ImageButton
                android:id="@+id/boton_imagen_menu_principal_2"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/didirapidexpress"
                android:background="@null"
                />
            
            <ImageButton
                android:id="@+id/boton_imagen_menu_principal_3"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/didirapidprofesionales"
                android:background="@null"
                />
            
            <ImageButton
                android:id="@+id/boton_imagen_menu_principal_4"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/didirapidreparaciones"
                android:background="@null"
                />
            
        </LinearLayout>
</LinearLayout>