<?xml version="1.0" encoding="utf-8"?>
<cr.didi.widget.AnimationLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/animation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:background="#FFFFFF"
    tools:context=".SecondActivity"
    android:clickable="true"
    android:orientation="vertical"
    android:animateLayoutChanges="false" >

    <LinearLayout
        android:id="@id/animation_layout_sidebar"
        android:layout_width="250dip"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#2980A6"
        >
        <ListView
            android:id="@+id/sidebar_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2980A6"
            />
    </LinearLayout>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@id/animation_layout_content"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".EventosActivity"
    android:background="#FFFFFF"
    android:clickable="true"
    android:animateLayoutChanges="false"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            
            <LinearLayout
    	        android:layout_width="0dp"
        	    android:layout_height="match_parent"
            	android:layout_weight=".15"
    	        android:orientation="horizontal" >
    	        <ImageButton
	                android:id="@+id/boton_imagen_hacia_profile"
    	            android:layout_width="0dp"
        	        android:layout_weight=".15"
        	        android:layout_height="match_parent"
            	    android:contentDescription="@string/imagebuttonstr"
                	android:background="@drawable/configuracion3"
                	android:onClick="onClickContentButton"
                />
        	</LinearLayout>
			<LinearLayout
    	        android:layout_width="0dp"
        	    android:layout_height="match_parent"
            	android:layout_weight=".6"
	            android:background="@drawable/buscador"
    	        android:orientation="horizontal" >
    	        <EditText android:id="@+id/text_field_busqueda_inicio"
	                android:layout_height="match_parent"
    	            android:hint="@string/string_buscar"
    	            android:background="@null"
    	            android:paddingTop="5dp"
    	            android:paddingBottom="5dp"
    	            android:paddingLeft="35dp"
        	        android:layout_width="match_parent" />
        	</LinearLayout>

            <ImageButton
                android:id="@+id/boton_imagen_proceder_busqueda"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:contentDescription="@string/imagebuttonstr"
                android:layout_height="match_parent"
                android:background="@drawable/logonuevodididifuso"
                android:scaleType="centerInside"
                android:onClick="clickeadoAlBotonBusqueda"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".005"
            android:background="@drawable/line"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".095"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/buttontaxismenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".249"
                android:layout_height="match_parent"
		        android:text="@string/button_taxis"
		        android:background="@null"
		        android:textColor="#2980A6"
		        android:onClick="pasarAViewPedirTaxi" />
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".005"
            	android:background="@drawable/grayverticallines"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
    	        android:paddingRight="@dimen/activity_horizontal_margin"
        	    android:orientation="horizontal" >
	        </LinearLayout>
            <Button
                android:id="@+id/buttoneventosmenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_eventos"
		        android:background="@null"
		        android:textColor="#2980A6"
		        android:onClick="clickeadoAlBotonEventos" />
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".005"
            	android:background="@drawable/grayverticallines"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
    	        android:paddingRight="@dimen/activity_horizontal_margin"
        	    android:orientation="horizontal" >
	        </LinearLayout>
            <Button
                android:id="@+id/buttonreservasmenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_reservas"
		        android:background="@null"
		        android:textColor="#2980A6"
		        android:onClick="clickeadoAlBotonReservas" />
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".005"
            	android:background="@drawable/grayverticallines"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
    	        android:paddingRight="@dimen/activity_horizontal_margin"
        	    android:orientation="horizontal" >
	        </LinearLayout>
            <Button
                android:id="@+id/buttondirectoriomenuprinc"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
		        android:text="@string/button_directorio"
		        android:background="@null"
		        android:textColor="#2980A6"
		        />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".015"
            android:orientation="horizontal" >
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".1">
	        </LinearLayout>
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".1">
	        </LinearLayout>
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".1">
	        </LinearLayout>
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".1"
        	    android:background="@drawable/linetaxis" >
	        </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".005"
            android:background="@drawable/line"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
        </LinearLayout>
        
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".78"
            android:orientation="vertical" >
	    <LinearLayout
            android:layout_width="match_parent"
            android:baselineAligned="true"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
            <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".35"
            	android:paddingLeft="@dimen/activity_horizontal_margin"
	            android:paddingRight="@dimen/activity_horizontal_margin"
    	        android:orientation="vertical" >
                <ImageView
                    android:id="@+id/logocliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dides" />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="0dp"
    	        android:layout_height="match_parent"
        	    android:layout_weight=".65"
            	android:paddingLeft="@dimen/activity_horizontal_margin"
	            android:paddingRight="@dimen/activity_horizontal_margin"
    	        android:orientation="horizontal" >
	            <TextView
	                android:id="@+id/textdescripcioncliente"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="TextView" />
	        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".45"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
	        <ImageView
                    android:id="@+id/bannercliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:src="@drawable/dides" />
        </LinearLayout>
	    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".165"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
        </LinearLayout>
        
	    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".005"
            android:background="@drawable/line"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
        </LinearLayout>
	    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".08"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
	        <TextView
	                android:id="@+id/textnombrecliente"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:textColor="#2980A6"
	                android:text="TextView" />
        </LinearLayout>
	</LinearLayout>
</LinearLayout>

</cr.didi.widget.AnimationLayout>